--- a/lib/image/agent/pyproject.toml
+++ b/lib/image/agent/pyproject.toml
@@ -1,15 +1,12 @@
 [project]
-name = "app"
+name = "agent"
 version = "0.1.0"
 description = "Add your description here"
 authors = [
     { name = "nekrassov01", email = "unclek62@gmail.com" }
 ]
 dependencies = [
-    "streamlit>=1.35.0",
-    "boto3==1.34.124",
-    "boto3-stubs[s3,ec2,bedrock,bedrock-runtime,bedrock-agent,bedrock-agent-runtime]==1.34.124",
-    "streamlit-authenticator>=0.3.2",
+    "boto3>=1.34.123",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
@@ -26,4 +23,4 @@ dev-dependencies = []
 allow-direct-references = true
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/app"]
+packages = ["src/agent"]
