--- a/lib/image/app/src/app/requirements.txt
+++ b/lib/image/app/src/app/requirements.txt
@@ -1,6 +1,3 @@
-boto3==1.34.113
-langchain==0.2.1
-langchain-community==0.2.1
-langchain-core==0.2.1
-langchain-aws==0.1.6
+boto3==1.34.124
 streamlit==1.35.0
+streamlit-authenticator==0.3.2
